[gd_scene load_steps=90 format=3 uid="uid://chj660r4lvs3q"]

[ext_resource type="Script" path="res://Home/SchoolManager/EditSceens/EditLevelScreen.gd" id="1_ubq7m"]
[ext_resource type="StyleBox" uid="uid://b5l8bij5x63n3" path="res://Assets/ButtonColor/BlueButtonNormal.tres" id="1_wdoud"]
[ext_resource type="StyleBox" uid="uid://bt60dr6ro1cwu" path="res://Assets/ButtonColor/BlueButtonHover.tres" id="2_rim0f"]
[ext_resource type="StyleBox" uid="uid://b4r6ml4yts6gy" path="res://Assets/ButtonColor/GreenButtonNormal.tres" id="3_7g1jh"]
[ext_resource type="StyleBox" uid="uid://ck1raeeejtfaw" path="res://Assets/ButtonColor/GreenButtonHover.tres" id="4_yg6cf"]
[ext_resource type="StyleBox" uid="uid://cxt3p1cqhcx1g" path="res://Assets/ButtonColor/RedButtonNormal.tres" id="5_on8h0"]
[ext_resource type="StyleBox" uid="uid://b1vp12avcsa6q" path="res://Assets/ButtonColor/RedButtonHover.tres" id="6_gl24x"]
[ext_resource type="Texture2D" uid="uid://b75b3p3lqd04c" path="res://Assets/Loading/loading.png" id="8_w7g74"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uhqr2"]
atlas = ExtResource("8_w7g74")
region = Rect2(0, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_a55f0"]
atlas = ExtResource("8_w7g74")
region = Rect2(480, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_xctrn"]
atlas = ExtResource("8_w7g74")
region = Rect2(960, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtxk5"]
atlas = ExtResource("8_w7g74")
region = Rect2(1440, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0v0y"]
atlas = ExtResource("8_w7g74")
region = Rect2(1920, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtmku"]
atlas = ExtResource("8_w7g74")
region = Rect2(2400, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntwl1"]
atlas = ExtResource("8_w7g74")
region = Rect2(2880, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_ut4b1"]
atlas = ExtResource("8_w7g74")
region = Rect2(3360, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7djd"]
atlas = ExtResource("8_w7g74")
region = Rect2(3840, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2j8c"]
atlas = ExtResource("8_w7g74")
region = Rect2(4320, 0, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_etw58"]
atlas = ExtResource("8_w7g74")
region = Rect2(0, 270, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_048p6"]
atlas = ExtResource("8_w7g74")
region = Rect2(480, 270, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_trw5e"]
atlas = ExtResource("8_w7g74")
region = Rect2(960, 270, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_63vr7"]
atlas = ExtResource("8_w7g74")
region = Rect2(1440, 270, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbkvj"]
atlas = ExtResource("8_w7g74")
region = Rect2(1920, 270, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7b5e"]
atlas = ExtResource("8_w7g74")
region = Rect2(2400, 270, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngnyd"]
atlas = ExtResource("8_w7g74")
region = Rect2(2880, 270, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwith"]
atlas = ExtResource("8_w7g74")
region = Rect2(3360, 270, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_dojxo"]
atlas = ExtResource("8_w7g74")
region = Rect2(3840, 270, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lq2u"]
atlas = ExtResource("8_w7g74")
region = Rect2(4320, 270, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_23q88"]
atlas = ExtResource("8_w7g74")
region = Rect2(0, 540, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_yii52"]
atlas = ExtResource("8_w7g74")
region = Rect2(480, 540, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_egxnm"]
atlas = ExtResource("8_w7g74")
region = Rect2(960, 540, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbneh"]
atlas = ExtResource("8_w7g74")
region = Rect2(1440, 540, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_24sna"]
atlas = ExtResource("8_w7g74")
region = Rect2(1920, 540, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_sg2y6"]
atlas = ExtResource("8_w7g74")
region = Rect2(2400, 540, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3ccc"]
atlas = ExtResource("8_w7g74")
region = Rect2(2880, 540, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1j3n"]
atlas = ExtResource("8_w7g74")
region = Rect2(3360, 540, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtfcs"]
atlas = ExtResource("8_w7g74")
region = Rect2(3840, 540, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyjmj"]
atlas = ExtResource("8_w7g74")
region = Rect2(4320, 540, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqmgm"]
atlas = ExtResource("8_w7g74")
region = Rect2(0, 810, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhbb1"]
atlas = ExtResource("8_w7g74")
region = Rect2(480, 810, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiuik"]
atlas = ExtResource("8_w7g74")
region = Rect2(960, 810, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2nng"]
atlas = ExtResource("8_w7g74")
region = Rect2(1440, 810, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1v12"]
atlas = ExtResource("8_w7g74")
region = Rect2(1920, 810, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvx5e"]
atlas = ExtResource("8_w7g74")
region = Rect2(2400, 810, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_owtrq"]
atlas = ExtResource("8_w7g74")
region = Rect2(2880, 810, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_an2is"]
atlas = ExtResource("8_w7g74")
region = Rect2(3360, 810, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hmwo"]
atlas = ExtResource("8_w7g74")
region = Rect2(3840, 810, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_mntjw"]
atlas = ExtResource("8_w7g74")
region = Rect2(4320, 810, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsyrt"]
atlas = ExtResource("8_w7g74")
region = Rect2(0, 1080, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_k55g7"]
atlas = ExtResource("8_w7g74")
region = Rect2(480, 1080, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_838ym"]
atlas = ExtResource("8_w7g74")
region = Rect2(960, 1080, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcuh3"]
atlas = ExtResource("8_w7g74")
region = Rect2(1440, 1080, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_61dxk"]
atlas = ExtResource("8_w7g74")
region = Rect2(1920, 1080, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_vochg"]
atlas = ExtResource("8_w7g74")
region = Rect2(2400, 1080, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_k06vs"]
atlas = ExtResource("8_w7g74")
region = Rect2(2880, 1080, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wgym"]
atlas = ExtResource("8_w7g74")
region = Rect2(3360, 1080, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7la8"]
atlas = ExtResource("8_w7g74")
region = Rect2(3840, 1080, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2kit"]
atlas = ExtResource("8_w7g74")
region = Rect2(4320, 1080, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_04nqj"]
atlas = ExtResource("8_w7g74")
region = Rect2(0, 1350, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_k77kj"]
atlas = ExtResource("8_w7g74")
region = Rect2(480, 1350, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt0a8"]
atlas = ExtResource("8_w7g74")
region = Rect2(960, 1350, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssqu0"]
atlas = ExtResource("8_w7g74")
region = Rect2(1440, 1350, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kvai"]
atlas = ExtResource("8_w7g74")
region = Rect2(1920, 1350, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrkt0"]
atlas = ExtResource("8_w7g74")
region = Rect2(2400, 1350, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw17r"]
atlas = ExtResource("8_w7g74")
region = Rect2(2880, 1350, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lkyu"]
atlas = ExtResource("8_w7g74")
region = Rect2(3360, 1350, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uuov"]
atlas = ExtResource("8_w7g74")
region = Rect2(3840, 1350, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4cwh"]
atlas = ExtResource("8_w7g74")
region = Rect2(4320, 1350, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_e17jc"]
atlas = ExtResource("8_w7g74")
region = Rect2(0, 1620, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr5q4"]
atlas = ExtResource("8_w7g74")
region = Rect2(480, 1620, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_phbrr"]
atlas = ExtResource("8_w7g74")
region = Rect2(960, 1620, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pca3"]
atlas = ExtResource("8_w7g74")
region = Rect2(1440, 1620, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7re4"]
atlas = ExtResource("8_w7g74")
region = Rect2(1920, 1620, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtfvo"]
atlas = ExtResource("8_w7g74")
region = Rect2(2400, 1620, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mv5r"]
atlas = ExtResource("8_w7g74")
region = Rect2(2880, 1620, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmiik"]
atlas = ExtResource("8_w7g74")
region = Rect2(3360, 1620, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_exr81"]
atlas = ExtResource("8_w7g74")
region = Rect2(3840, 1620, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qo2x"]
atlas = ExtResource("8_w7g74")
region = Rect2(4320, 1620, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_cldun"]
atlas = ExtResource("8_w7g74")
region = Rect2(0, 1890, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkg7o"]
atlas = ExtResource("8_w7g74")
region = Rect2(480, 1890, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_rx55e"]
atlas = ExtResource("8_w7g74")
region = Rect2(960, 1890, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iphd"]
atlas = ExtResource("8_w7g74")
region = Rect2(1440, 1890, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4lry"]
atlas = ExtResource("8_w7g74")
region = Rect2(1920, 1890, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_00rm8"]
atlas = ExtResource("8_w7g74")
region = Rect2(2400, 1890, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc8m3"]
atlas = ExtResource("8_w7g74")
region = Rect2(2880, 1890, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_82gb8"]
atlas = ExtResource("8_w7g74")
region = Rect2(3360, 1890, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_vek8g"]
atlas = ExtResource("8_w7g74")
region = Rect2(3840, 1890, 480, 270)

[sub_resource type="AtlasTexture" id="AtlasTexture_27tdo"]
atlas = ExtResource("8_w7g74")
region = Rect2(4320, 1890, 480, 270)

[sub_resource type="SpriteFrames" id="SpriteFrames_0keu7"]
animations = [{
"frames": [SubResource("AtlasTexture_uhqr2"), SubResource("AtlasTexture_a55f0"), SubResource("AtlasTexture_xctrn"), SubResource("AtlasTexture_gtxk5"), SubResource("AtlasTexture_k0v0y"), SubResource("AtlasTexture_rtmku"), SubResource("AtlasTexture_ntwl1"), SubResource("AtlasTexture_ut4b1"), SubResource("AtlasTexture_l7djd"), SubResource("AtlasTexture_e2j8c"), SubResource("AtlasTexture_etw58"), SubResource("AtlasTexture_048p6"), SubResource("AtlasTexture_trw5e"), SubResource("AtlasTexture_63vr7"), SubResource("AtlasTexture_jbkvj"), SubResource("AtlasTexture_x7b5e"), SubResource("AtlasTexture_ngnyd"), SubResource("AtlasTexture_hwith"), SubResource("AtlasTexture_dojxo"), SubResource("AtlasTexture_5lq2u"), SubResource("AtlasTexture_23q88"), SubResource("AtlasTexture_yii52"), SubResource("AtlasTexture_egxnm"), SubResource("AtlasTexture_xbneh"), SubResource("AtlasTexture_24sna"), SubResource("AtlasTexture_sg2y6"), SubResource("AtlasTexture_r3ccc"), SubResource("AtlasTexture_m1j3n"), SubResource("AtlasTexture_wtfcs"), SubResource("AtlasTexture_gyjmj"), SubResource("AtlasTexture_sqmgm"), SubResource("AtlasTexture_nhbb1"), SubResource("AtlasTexture_hiuik"), SubResource("AtlasTexture_o2nng"), SubResource("AtlasTexture_m1v12"), SubResource("AtlasTexture_kvx5e"), SubResource("AtlasTexture_owtrq"), SubResource("AtlasTexture_an2is"), SubResource("AtlasTexture_0hmwo"), SubResource("AtlasTexture_mntjw"), SubResource("AtlasTexture_gsyrt"), SubResource("AtlasTexture_k55g7"), SubResource("AtlasTexture_838ym"), SubResource("AtlasTexture_pcuh3"), SubResource("AtlasTexture_61dxk"), SubResource("AtlasTexture_vochg"), SubResource("AtlasTexture_k06vs"), SubResource("AtlasTexture_0wgym"), SubResource("AtlasTexture_f7la8"), SubResource("AtlasTexture_h2kit"), SubResource("AtlasTexture_04nqj"), SubResource("AtlasTexture_k77kj"), SubResource("AtlasTexture_bt0a8"), SubResource("AtlasTexture_ssqu0"), SubResource("AtlasTexture_6kvai"), SubResource("AtlasTexture_qrkt0"), SubResource("AtlasTexture_jw17r"), SubResource("AtlasTexture_8lkyu"), SubResource("AtlasTexture_5uuov"), SubResource("AtlasTexture_s4cwh"), SubResource("AtlasTexture_e17jc"), SubResource("AtlasTexture_rr5q4"), SubResource("AtlasTexture_phbrr"), SubResource("AtlasTexture_6pca3"), SubResource("AtlasTexture_g7re4"), SubResource("AtlasTexture_mtfvo"), SubResource("AtlasTexture_8mv5r"), SubResource("AtlasTexture_rmiik"), SubResource("AtlasTexture_exr81"), SubResource("AtlasTexture_7qo2x"), SubResource("AtlasTexture_cldun"), SubResource("AtlasTexture_gkg7o"), SubResource("AtlasTexture_rx55e"), SubResource("AtlasTexture_2iphd"), SubResource("AtlasTexture_v4lry"), SubResource("AtlasTexture_00rm8"), SubResource("AtlasTexture_gc8m3"), SubResource("AtlasTexture_82gb8"), SubResource("AtlasTexture_vek8g"), SubResource("AtlasTexture_27tdo")],
"loop": true,
"name": &"default",
"speed": 40.0
}]

[node name="EditLevelScreen" type="Control"]
custom_minimum_size = Vector2i(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ubq7m")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.197937, 0.197937, 0.197937, 0.784314)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect2" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2i(844, 704)
offset_left = 538.0
offset_top = 188.0
offset_right = 1382.0
offset_bottom = 892.0
color = Color(0.290196, 0.839216, 1, 1)

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2i(840, 700)
offset_left = 540.0
offset_top = 190.0
offset_right = 1380.0
offset_bottom = 890.0
color = Color(0.176471, 0.176471, 0.176471, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2i(800, 200)
offset_left = 560.0
offset_top = 208.0
offset_right = 1360.0
offset_bottom = 871.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2i(0, 60)
offset_right = 800.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "Editar Curso"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
offset_top = 64.0
offset_right = 800.0
offset_bottom = 68.0

[node name="NameBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
offset_top = 72.0
offset_right = 800.0
offset_bottom = 99.0
theme_override_constants/separation = 300

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer/NameBox"]
offset_right = 58.0
offset_bottom = 26.0
text = "Curso *"

[node name="LevelOption" type="OptionButton" parent="CenterContainer/VBoxContainer/NameBox"]
custom_minimum_size = Vector2i(400, 0)
offset_left = 358.0
offset_right = 758.0
offset_bottom = 27.0
theme_override_styles/normal = ExtResource("1_wdoud")
theme_override_styles/hover = ExtResource("1_wdoud")
theme_override_styles/pressed = ExtResource("2_rim0f")
disabled = true
alignment = 1
item_count = 13
selected = 0
popup/item_0/text = "Seleccione Curso"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_0/separator = true
popup/item_1/text = "PRIMERO BASICO"
popup/item_1/id = 1
popup/item_2/text = "SEGUNDO BASICO"
popup/item_2/id = 2
popup/item_3/text = "TERCERO BASICO"
popup/item_3/id = 3
popup/item_4/text = "CUARTO BASICO"
popup/item_4/id = 4
popup/item_5/text = "QUINTO BASICO"
popup/item_5/id = 5
popup/item_6/text = "SEXTO BASICO"
popup/item_6/id = 6
popup/item_7/text = "SEPTIMO BASICO"
popup/item_7/id = 7
popup/item_8/text = "OCTAVO BASICO"
popup/item_8/id = 8
popup/item_9/text = "PRIMERO MEDIO"
popup/item_9/id = 9
popup/item_10/text = "SEGUNDO MEDIO"
popup/item_10/id = 10
popup/item_11/text = "TERCERO MEDIO"
popup/item_11/id = 11
popup/item_12/text = "CUARTO MEDIO"
popup/item_12/id = 12

[node name="NameWarning" type="Label" parent="CenterContainer/VBoxContainer"]
offset_top = 103.0
offset_right = 800.0
offset_bottom = 126.0
theme_override_colors/font_color = Color(0.901961, 0.290196, 0, 1)
horizontal_alignment = 1

[node name="GradeListBox" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
offset_top = 130.0
offset_right = 800.0
offset_bottom = 156.0
theme_override_constants/separation = 300

[node name="GradeListName" type="Label" parent="CenterContainer/VBoxContainer/GradeListBox"]
offset_right = 219.0
offset_bottom = 26.0
text = "Lista de Letras para el Curso"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2i(800, 60)
offset_top = 160.0
offset_right = 800.0
offset_bottom = 220.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
offset_left = 70.0
offset_top = 10.0
offset_right = 730.0
offset_bottom = 50.0
theme_override_constants/separation = 60

[node name="DeleteLetter" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
custom_minimum_size = Vector2i(300, 0)
offset_right = 300.0
offset_bottom = 40.0
theme_override_styles/normal = ExtResource("5_on8h0")
theme_override_styles/hover = ExtResource("6_gl24x")
text = "Eliminar Letra"

[node name="CreateLetter" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
custom_minimum_size = Vector2i(300, 40)
offset_left = 360.0
offset_right = 660.0
offset_bottom = 40.0
theme_override_styles/normal = ExtResource("3_7g1jh")
theme_override_styles/hover = ExtResource("4_yg6cf")
text = "Crear nueva letra"

[node name="CreateWarning" type="Label" parent="CenterContainer/VBoxContainer"]
offset_top = 224.0
offset_right = 800.0
offset_bottom = 247.0
theme_override_colors/font_color = Color(0.878431, 0.74902, 0.258824, 1)
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2i(800, 360)
offset_top = 251.0
offset_right = 800.0
offset_bottom = 611.0
color = Color(0.270588, 0.270588, 0.270588, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBoxContainer/ColorRect"]
custom_minimum_size = Vector2i(798, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="GradeList" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ColorRect/ScrollContainer"]
custom_minimum_size = Vector2i(800, 360)
offset_right = 800.0
offset_bottom = 360.0
theme_override_constants/separation = 20

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
offset_top = 615.0
offset_right = 800.0
offset_bottom = 619.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2i(0, 40)
offset_top = 623.0
offset_right = 800.0
offset_bottom = 663.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
offset_left = 170.0
offset_top = 4.0
offset_right = 630.0
offset_bottom = 36.0
theme_override_constants/separation = 60

[node name="ExitCreateLevel" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2i(200, 32)
offset_right = 200.0
offset_bottom = 32.0
theme_override_styles/normal = ExtResource("5_on8h0")
theme_override_styles/hover = ExtResource("6_gl24x")
text = "Cancelar "

[node name="SaveCreateLevel" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2i(200, 0)
offset_left = 260.0
offset_right = 460.0
offset_bottom = 32.0
theme_override_styles/normal = ExtResource("3_7g1jh")
theme_override_styles/hover = ExtResource("4_yg6cf")
text = "Guardar Curso"

[node name="SendLevelToServer" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2i(1920, 1080)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -800.0
offset_top = -1080.0
offset_right = 800.0
grow_horizontal = 2
grow_vertical = 0

[node name="CenterContainer" type="CenterContainer" parent="SendLevelToServer"]
custom_minimum_size = Vector2i(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="SendLevelToServer/CenterContainer"]
custom_minimum_size = Vector2i(604, 204)
offset_left = 658.0
offset_top = 438.0
offset_right = 1262.0
offset_bottom = 642.0
color = Color(0.0705882, 0.729412, 1, 1)

[node name="ColorRect2" type="ColorRect" parent="SendLevelToServer/CenterContainer"]
custom_minimum_size = Vector2i(600, 200)
offset_left = 660.0
offset_top = 440.0
offset_right = 1260.0
offset_bottom = 640.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Saving" type="VBoxContainer" parent="SendLevelToServer/CenterContainer"]
custom_minimum_size = Vector2i(600, 200)
offset_left = 660.0
offset_top = 440.0
offset_right = 1260.0
offset_bottom = 640.0
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="SendLevelToServer/CenterContainer/Saving"]
custom_minimum_size = Vector2i(0, 100)
offset_right = 600.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 24
text = "Guardando Cursos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2d" type="AnimatedSprite2D" parent="SendLevelToServer/CenterContainer/Saving"]
position = Vector2(300, 128)
scale = Vector2(0.5, 0.5)
frames = SubResource("SpriteFrames_0keu7")
playing = true

[node name="LevelSaved" type="Control" parent="."]
visible = false
custom_minimum_size = Vector2i(1920, 1080)
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -800.0
offset_top = -1080.0
offset_right = 800.0
grow_horizontal = 2
grow_vertical = 0

[node name="CenterContainer" type="CenterContainer" parent="LevelSaved"]
custom_minimum_size = Vector2i(1920, 1080)
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="LevelSaved/CenterContainer"]
custom_minimum_size = Vector2i(604, 204)
offset_left = 658.0
offset_top = 438.0
offset_right = 1262.0
offset_bottom = 642.0
color = Color(0.0705882, 0.729412, 1, 1)

[node name="ColorRect2" type="ColorRect" parent="LevelSaved/CenterContainer"]
custom_minimum_size = Vector2i(600, 200)
offset_left = 660.0
offset_top = 440.0
offset_right = 1260.0
offset_bottom = 640.0
color = Color(0.196078, 0.196078, 0.196078, 1)

[node name="Saving" type="VBoxContainer" parent="LevelSaved/CenterContainer"]
custom_minimum_size = Vector2i(600, 200)
offset_left = 660.0
offset_top = 440.0
offset_right = 1260.0
offset_bottom = 640.0
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="LevelSaved/CenterContainer/Saving"]
custom_minimum_size = Vector2i(0, 100)
offset_right = 600.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 24
text = "Cursos Guardados"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="LevelSaved/CenterContainer/Saving"]
offset_top = 116.0
offset_right = 600.0
offset_bottom = 120.0

[node name="GoTo" type="Button" parent="LevelSaved/CenterContainer/Saving"]
custom_minimum_size = Vector2i(200, 40)
offset_left = 200.0
offset_top = 136.0
offset_right = 400.0
offset_bottom = 176.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = ExtResource("3_7g1jh")
theme_override_styles/hover = ExtResource("4_yg6cf")
text = "Aceptar"

[connection signal="item_selected" from="CenterContainer/VBoxContainer/NameBox/LevelOption" to="." method="_on_type_option_item_selected"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DeleteLetter" to="." method="_on_delete_letter_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/CreateLetter" to="." method="_on_create_letter_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/ExitCreateLevel" to="." method="_on_exit_create_level_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/HBoxContainer/SaveCreateLevel" to="." method="_on_save_create_level_pressed"]
[connection signal="pressed" from="LevelSaved/CenterContainer/Saving/GoTo" to="." method="_on_go_to_pressed"]
